apps/base/minio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio
  namespace: minio
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    external-dns.alpha.kubernetes.io/target: ${external_ip}
spec:
  ingressClassName: traefik
  rules:
    - host: minio.${base_domain}
      http:
        paths:
          - backend:
              service:
                name: minio
                port:
                  number: 9000
            path: /
            pathType: Prefix
    - host: minioconsole.${base_domain}
      http:
        paths:
          - backend:
              service:
                name: minio
                port:
                  number: 9001
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - minio.${base_domain}
        - minioconsole.${base_domain}
      secretName: minio-tls
